--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@google/markerclustererplus": "^5.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -60,6 +61,8 @@
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@compodoc/compodoc": "^1.1.10",
+    "@types/google.maps": "^3.49.2",
+    "@types/googlemaps": "^3.43.3",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.22",
     "codelyzer": "^6.0.0",
